# kaitai-wow

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .relint.yml  .yamllint.yaml  Makefile  README.md  conftest.py  gen_wowdump_filetypes.sh  ksy-merge.py  m2.ksy  m2dump.py  pyproject.toml  setup.cfg  skin.ksy  wowdump.py
chunks/: afid.ksy  bfid.ksy  detl.ksy  exp2.ksy  ldv1.ksy  md20.ksy  md21.ksy  pgd1.ksy  sfid.ksy  ska1.ksy  skb1.ksy  skin.ksy  skl1.ksy  skpd.ksy  sks1.ksy  txac.ksy  txid.ksy
chunks/adt/: mcnk.ksy  mddf.ksy  mdid.ksy  mh2o.ksy  mhdr.ksy  mhid.ksy  mmdx.ksy  mmid.ksy  mwid.ksy  mwmo.ksy
chunks/m2/: detl.ksy  md20.ksy  sfid.ksy
chunks/skel/: bfid.ksy  skpd.ksy
chunks/wdt/: maid.ksy  main.ksy  maoh.ksy  mphd.ksy  mslt.ksy  pvmi.ksy
chunks/wmo/: gfid.ksy  mdal.ksy  mfog.ksy  moba.ksy  mobn.ksy  mobr.ksy  mobs.ksy  mocv.ksy  modd.ksy  modi.ksy  modr.ksy  mods.ksy  mogi.ksy  mogn.ksy  mogp.ksy  mohd.ksy  molt.ksy  momt.ksy  mopr.ksy  mopt.ksy  mopv.ksy  mosb.ksy  mota.ksy  motv.ksy  movi.ksy
enums/: animnames.ksy  keybonenames.ksy  wowversions.ksy
filetypes/: adt.ksy  anim.ksy  blp.ksy  bone.ksy  m2.ksy  phys.ksy  skel.ksy  skin.ksy  tex.ksy  wdl.ksy  wdt.ksy  wmo.ksy
kaitai_wow/: adt.py  anim.py  blp.py  bls.py  bone.py  m2.py  phys.py  skel.py  skin.py  tex.py  wdl.py  wdt.py  wmo.py
ksy/: .yamllint.yaml
ksy/chunks/: afid.ksy
ksy/enums/: animnames.ksy
ksy/filetypes/: blp.ksy  bls.ksy  wdl.ksy
ksy/types/: base.ksy  m2attachment.ksy  m2camera.ksy  m2compbone.ksy  m2event.ksy  m2light.ksy  m2loop.ksy  m2particle.ksy  m2ribbon.ksy  m2sequencefallback.ksy  m2shadowbatch.ksy  m2vertex.ksy  pgd1.ksy  unknown_chunk.ksy  utility.ksy  wow_utility.ksy
scripts/: gen_wowdump_filetypes.sh  ksy-merge.py
testfiles/: diffuse_edgefade_t1_t2.bls  spectraltiger.m2  sword_1h_bastion_d_02.m2
testfiles/newplayerexperience/: 8du_13495.wmo  8du_13495_000.wmo  8du_13495_000_lod1.wmo  8du_13495_000_lod2.wmo  8du_13495_001.wmo  8du_13495_001_lod1.wmo  8du_13495_001_lod2.wmo
testfiles/nightelfarcher_f/: nightelfarcher_f.skel  nightelfarcher_f_01.blp  nightelfarcher_f_02.blp  nightelfarcher_f_03.blp  nightelfarcher_f_lod01.skin  nightelfarcher_f_lod02.skin  nightelfarcher_f_lod03.skin  nightelffemaleeyeglow.blp
testfiles/priest_guardianspirit/: guardianspiritwing.blp  priest_guardianspirit.m2  priest_guardianspirit00.skin  priest_guardianspirit_wings.m2  priest_guardianspirit_wings00.skin  priest_guardianspirit_wings0060-00.anim  priest_guardianspirit_wings0075-00.anim  priest_guardianspirit_wings0096-00.anim  priest_guardianspirit_wings0097-00.anim  priest_guardianspirit_wings0098-00.anim  priest_guardianspirit_wings0120-00.anim  priest_guardianspirit_wings0123-00.anim  priest_guardianspirit_wings0128-00.anim  priest_guardianspirit_wings0129-00.anim  priest_guardianspirit_wings_lod00.skin  priest_guardianspirit_wings_lod01.skin  priest_guardianspirit_wings_lod02.skin
testfiles/staff_2h_artifactaegwynsstaff_d_05/: staff_2h_artifactaegwynsstaff_d_05.json  staff_2h_artifactaegwynsstaff_d_05.m2  staff_2h_artifactaegwynsstaff_d_0500.skin  staff_2h_artifactaegwynsstaff_d_05_json.pathdump.txt  staff_2h_artifactaegwynsstaff_d_05_m2.pathdump.txt  staff_2h_artifactaegwynsstaff_d_05blue.blp  staff_2h_artifactaegwynsstaff_d_05copper.blp  staff_2h_artifactaegwynsstaff_d_05gold.blp  staff_2h_artifactaegwynsstaff_d_05silver.blp
testfiles/zandalarcontinentfinale/: zandalarcontinentfinale.tex  zandalarcontinentfinale.wdl  zandalarcontinentfinale.wdt  zandalarcontinentfinale_28_30.adt  zandalarcontinentfinale_28_30_lod.adt  zandalarcontinentfinale_28_30_obj0.adt  zandalarcontinentfinale_28_30_obj1.adt  zandalarcontinentfinale_28_30_tex0.adt  zandalarcontinentfinale_28_31.adt  zandalarcontinentfinale_28_31_lod.adt  zandalarcontinentfinale_28_31_obj0.adt  zandalarcontinentfinale_28_31_obj1.adt  zandalarcontinentfinale_28_31_tex0.adt  zandalarcontinentfinale_28_32.adt  zandalarcontinentfinale_28_32_lod.adt  zandalarcontinentfinale_28_32_obj0.adt  zandalarcontinentfinale_28_32_obj1.adt  zandalarcontinentfinale_28_32_tex0.adt  zandalarcontinentfinale_28_33.adt  zandalarcontinentfinale_28_33_lod.adt  zandalarcontinentfinale_28_33_obj0.adt  zandalarcontinentfinale_28_33_obj1.adt  zandalarcontinentfinale_28_33_tex0.adt  zandalarcontinentfinale_28_34.adt  zandalarcontinentfinale_28_34_lod.adt  zandalarcontinentfinale_28_34_obj0.adt  zandalarcontinentfinale_28_34_obj1.adt  zandalarcontinentfinale_28_34_tex0.adt  zandalarcontinentfinale_29_30.adt  zandalarcontinentfinale_29_30_lod.adt  zandalarcontinentfinale_29_30_obj0.adt  zandalarcontinentfinale_29_30_obj1.adt  zandalarcontinentfinale_29_30_tex0.adt  zandalarcontinentfinale_29_31.adt  zandalarcontinentfinale_29_31_lod.adt  zandalarcontinentfinale_29_31_obj0.adt  zandalarcontinentfinale_29_31_obj1.adt  zandalarcontinentfinale_29_31_tex0.adt  zandalarcontinentfinale_29_32.adt  zandalarcontinentfinale_29_32_lod.adt  (+88 more)
tests/: conftest.py  report.css  test_bulk.py  test_csvcache.py  test_listfile_download.py  test_references.py  test_test.py  test_walk.py  test_walk_arraylimit.py  test_walk_contenthash.py  test_walk_filter.py  test_walk_geometry.py  test_walk_hide_unneeded.py  test_walk_references.py  test_walk_resolve.py  test_walk_simplify.py
tests/test_data/: 8du_13495.wmo  8du_13495_000.wmo  flyingspriteevil.skel  levelup.m2  levelup00.skin  listfile_minimal.csv  nightelfarcher_f.m2  nightelfarcher_f00.skin  nightelffemale_hd0060-00.anim  nightelffemale_hd_markings_color_3641609.blp  staff_2h_draenorcrafted_d_02_c.m2  (+4 more)
types/: m2array.ksy  m2attachment.ksy  m2batch.ksy  m2camera.ksy  m2color.ksy  m2compbone.ksy  m2compquat.ksy  m2event.ksy  m2light.ksy  m2material.ksy  m2particle.ksy  m2ribbon.ksy  m2sequence.ksy  m2shadowbatch.ksy  m2skinsection.ksy  m2texture.ksy  m2texturetransform.ksy  m2textureweight.ksy  m2track.ksy  m2vertex.ksy  todo.ksy  utility.ksy  vector.ksy  wow_utility.ksy
wowdump/: __init__.py  csvcache.py  dumputil.py  filters.py  ksymeta.py  pathwalk.py  reports.py  reports.pyi  wowdump.py
(+64 files in other folders)
