[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
log_cli = false
addopts = [
    "--tb=short",
    "--strict-markers",
    "--html=report.html", "--css=report.css", "--self-contained-html",
    "--cov=wowdump", "--cov-report=html:htmlcov",
]

console_output_style = "count"
log_auto_indent = true
norecursedirs = [ "*", ]
python_files = [ "test_*.py", "check_*.py", "example_*.py", ]
testpaths = [ "tests", ]

required_plugins = [
    "pytest-html>=3.1",
    "pytest-cov >=2.12",
    "pytest-order >= 1.0",
]
