[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
log_cli = false
addopts = [
    "--tb=short",
    "--strict-markers",
    "--html=@rootdir@/tests/report.html", "--css=@rootdir@/tests/report.css", "--self-contained-html",
    "--cov=wowdump", "--cov-report=html:@rootdir@/tests/htmlcov",
]

console_output_style = "count"
log_auto_indent = true
norecursedirs = [ "*", ]
python_files = [ "test_*.py", "check_*.py", "example_*.py", ]
testpaths = [ "tests", ]

required_plugins = [
    "pytest-html>=3.1",
    "pytest-cov >=2.12",
    "pytest-order >= 1.0",
]


# tox doesn't quite support native pyproject.toml, but at least lets us
# store the ini-type config here
[tool.tox]

legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37,py38,py39,py310

[testenv]
deps =
    pytest >=6.2
    pytest-html >=3.1
    pytest-cov >=2.12
    pytest-order >=1.0
    requests >=2.25.0
    kaitaistruct ==0.9
    ppretty >=1.3

commands = {posargs:pytest}
"""
