[metadata]
name = kaitai-wow-alinsavix
version = 0.0.1
author = TDV Alinsa
author_email = alinsa-github@lupine.org
description = Read World of Warcraft data formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alinsavix/kaitai-wow
project_urls =
    Bug Tracker = https://github.com/alinsavix/kaitai-wow/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment


[options]
package_dir =
    # = src
packages = kaitai_wow
python_requires = >=3.6
