[metadata]
name = wowdump-alinsavix
version = 0.0.1
author = TDV Alinsa
author_email = alinsa-github@lupine.org
description = Read World of Warcraft data formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alinsavix/kaitai-wow
project_urls =
    Bug Tracker = https://github.com/alinsavix/kaitai-wow/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment


[options]
package_dir =
    # = src
packages = wowdump
python_requires = >=3.6
install_requires =
    kaitaistruct==0.9
    ppretty>=1.3
    # pysqlite3~=0.4.0

# [options.extras_require]
# dev =
#	wheel~=0.36.2

#testing =
#	pytest-cov~=2.11.1
#	pytest-mock~=3.5.1
#	pytest~=6.2.2
#	tox~=3.21.3

[options.entry_points]
console_scripts =
    wowdump = wowdump:main
