[metadata]
name = wowdump-alinsavix
version = 0.0.1
author = TDV Alinsa
author_email = alinsa-github@lupine.org
description = Read World of Warcraft data formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alinsavix/kaitai-wow
project_urls =
    Bug Tracker = https://github.com/alinsavix/kaitai-wow/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment


[options]
packages = find_namespace:
package_dir =
    = .

# packages = wowdump
python_requires = >=3.9
install_requires =
    kaitaistruct==0.9
    ppretty>=1.3
    requests>=2.25.0

# [options.extras_require]
# dev =
#	wheel~=0.36.2

#testing =
#	pytest-cov~=2.11.1
#	pytest-mock~=3.5.1
#	pytest~=6.2.2
#	tox~=3.21.3
#	responses~=0.16.0

[options.packages.find]
    # I don't really want to put my one package in another subdir so that
    # I can use anything other than the top level as package_dir, so I guess
    # we're stuck with this ugliness
    where = .
    include =
        wowdump
        wowdump.commands
        wowdump.filetypes
        wowdump.simplifiers
    exclude =


[options.package_data]
    wowdump.filetypes = *.yaml


[options.entry_points]
console_scripts =
    wowdump = wowdump:main
